fix responsive on safari

--- a/styles/scss/Layouts/_blockchain.scss
+++ b/styles/scss/Layouts/_blockchain.scss
@@ -552,7 +552,7 @@
     margin-right: 25px !important;
   }
   .apexcharts-canvas {
-    margin-bottom: 100px !important;
+    // margin-bottom: 100px !important;
   }
   .idontknowwhat {
     text-align: right;
